[package]
name = "tower-signature"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
futures = "0.3"
hex = "0.4"
hyper = "0.14"
ring = "0.16"
tokio = { version = "1.20", features = ["full"] }
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.3"
