[package]
name = "tower-signature"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
futures = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["stream"] }
ring = { version = "0.16", features = ["std"] }
tokio = { version = "1.20", features = ["full"] }
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
axum = "0.5"
tracing-subscriber = "0.3"
